[tool.poetry]
name = "ivt"
version = "0.1.0"
description = ""
authors = ["Davide Nunes <davidelnunes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
scikit-optimize = "*"
scikit-learn = "*"
shap = "*"
plotly ="*"
# otherwise export to pdf has a loading mathjax error
xhtml2pdf = "*"
# kaleido engine to export plotly plots
kaleido = "0.2.1"
jupyter="*"
ipywidgets="*"
xgboost = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

